moved trivia after word map and squirrel-map-vis after context

--- a/index.html
+++ b/index.html
@@ -96,79 +96,7 @@
             <button class="squirButton" id="nextButtonHistorical">NEXT</button>
             <button class="squirButton" id="goBack">GO BACK</button>
         </div>
-        <!-- Squirrel Trivia -->
-        <div class="row section" id="squirrelTrivia">
-            <h1 class="centerItems">Let's test your knowledge on Squirrels!</h1>
-            <br>
-            <br>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="question">
-                            <h3>A squirrel’s front teeth never stop growing.</h3>
-                            <br>
-                        </div>
-                        <div>
-                            <input type="radio" name="question-1-answers" id="question-1-answers-A" value="A" />
-                            <label for="question-1-answers-A"> TRUE </label>
-                        </div>
-                        <div>
-                            <input type="radio" name="question-1-answers" id="question-1-answers-B" value="B" />
-                            <label for="question-1-answers-B">FALSE</label>
-                        </div>
-                        <br>
-                        <input type="submit" class="squirButton" id="question-1-answer" value="Check Answer">
-                        <br><br>
-                        <div class="answer-reveal" id="answer-1">
-                            This is true. their teeth grow at a rate of ~6 inches per year.
-                        </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="question">
-                            <h3>Squirrels can land on 2 feet.</h3>
-                            <br>
-                        </div>
-                        <div>
-                            <input type="radio" name="question-2-answers" id="question-2-answers-A" value="A" />
-                            <label for="question-2-answers-A"> TRUE </label>
-                        </div>
-                        <div>
-                            <input type="radio" name="question-2-answers" id="question-2-answers-B" value="B" />
-                            <label for="question-2-answers-B">FALSE</label>
-                        </div>
-                        <br>
-                        <input type="submit" class="squirButton" id="question-2-answer" value="Check Answer">
-                        <br><br>
-                        <div class="answer-reveal" id="answer-2">
-                            This is false. Squirrels, like cats, actually always land on 4 feet.
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="question">
-                            <h3>A newborn squirrel is ~3.5 inches long.</h3>
-                            <br>
-                        </div>
-                        <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-A" value="A" />
-                            <label for="question-3-answers-A"> TRUE </label>
-                        </div>
-                        <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-B" value="B" />
-                            <label for="question-3-answers-B">FALSE</label>
-                        </div>
-                        <br>
-                        <input type="submit" class="squirButton" id="question-3-answer" value="Check Answer">
-                        <br><br>
-                        <div class="answer-reveal" id="answer-3">
-                            This is false. Newborn squirrels are actually ~1 inch long.
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
 
         <!-- Rising Insights: Map and Stories Vis -->
         <div class="row section" id="mainMessage">
@@ -288,9 +216,78 @@
             </div>
         </div>
 
-        <!--    Transition from stories to bubble map   -->
-        <div class="section" id="bubbleTransition">
-            <h1>Put in stories about squirrel sounds & squirrel activities (chasing, running, etc.)</h1>
+        <!-- Squirrel Trivia -->
+        <div class="row section" id="squirrelTrivia">
+            <h1 class="centerItems">Let's test your knowledge on Squirrels!</h1>
+            <br>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="question">
+                            <h3>A squirrel’s front teeth never stop growing.</h3>
+                            <br>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-1-answers" id="question-1-answers-A" value="A" />
+                            <label for="question-1-answers-A"> TRUE </label>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-1-answers" id="question-1-answers-B" value="B" />
+                            <label for="question-1-answers-B">FALSE</label>
+                        </div>
+                        <br>
+                        <input type="submit" class="squirButton" id="question-1-answer" value="Check Answer">
+                        <br><br>
+                        <div class="answer-reveal" id="answer-1">
+                            This is true. their teeth grow at a rate of ~6 inches per year.
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="question">
+                            <h3>Squirrels can land on 2 feet.</h3>
+                            <br>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-2-answers" id="question-2-answers-A" value="A" />
+                            <label for="question-2-answers-A"> TRUE </label>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-2-answers" id="question-2-answers-B" value="B" />
+                            <label for="question-2-answers-B">FALSE</label>
+                        </div>
+                        <br>
+                        <input type="submit" class="squirButton" id="question-2-answer" value="Check Answer">
+                        <br><br>
+                        <div class="answer-reveal" id="answer-2">
+                            This is false. Squirrels, like cats, actually always land on 4 feet.
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="question">
+                            <h3>A newborn squirrel is ~3.5 inches long.</h3>
+                            <br>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-3-answers" id="question-3-answers-A" value="A" />
+                            <label for="question-3-answers-A"> TRUE </label>
+                        </div>
+                        <div>
+                            <input type="radio" name="question-3-answers" id="question-3-answers-B" value="B" />
+                            <label for="question-3-answers-B">FALSE</label>
+                        </div>
+                        <br>
+                        <input type="submit" class="squirButton" id="question-3-answer" value="Check Answer">
+                        <br><br>
+                        <div class="answer-reveal" id="answer-3">
+                            This is false. Newborn squirrels are actually ~1 inch long.
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
         <!-- Main Message: Bubble Vis -->
@@ -448,7 +445,7 @@
 <script>
     new fullpage('#fullpage', {
         // options here
-        anchors: ['Home', 'firstPage', 'secondPage', '3rdPage', '4thPage', '5thPage', '6thPage', '7thPage', '8thPage', '9thPage', '10thPage', '11thPage', '12thPage', 'About-Us'],
+        anchors: ['Home', 'firstPage', 'secondPage', '3rdPage', '4thPage', '5thPage', '6thPage', '7thPage', '8thPage', '9thPage', '10thPage', '11thPage', 'About-Us'],
         // autoScrolling false because story boxes need vertical scrolling
         autoScrolling: false,
         scrollingSpeed: 1000,
@@ -456,7 +453,7 @@
         slidesNavigation: true,
         navigation: true,
         navigationPosition: 'right',
-        navigationTooltips: ['Home', 'Guess Squirrels', 'Census Info', 'Squirrel Trivia', 'Map Vis', 'Story Sentiments', 'Stories Word Map', 'Squirrel Activities', 'Bubble Map', 'Sankey Diagram', 'Quotes', 'Walk in Central Park', 'Conclusion', 'About Us']
+        navigationTooltips: ['Home', 'Guess Squirrels', 'Census Info', 'Map Vis', 'Story Sentiments', 'Stories Word Map', 'Squirrel Trivia', 'Bubble Map', 'Sankey Diagram', 'Quotes', 'Walk in Central Park', 'Conclusion', 'About Us']
     });
 </script>
 
