updated titles and description for sankey and quotes sections

--- a/index.html
+++ b/index.html
@@ -368,17 +368,27 @@
 
         <!-- Main Message: Sankey Diagram -->
         <div class="row section" id="sankeyVis">
+            <!--      Title and Description      -->
+            <div class="sentimentDescription">
+                <h2 class="centerText squirrelMapTitle">The squirrels exhibited patterns in their behavior</h2>
+                <p class="squirrelMapCaption centerText">For example, squirrels that chased other squirrels were also more likely to run from humans</p>
+            </div>
             <div class="col-md-12">
+                <!--        PUT VISUALIZATIONS HERE       -->
                 <div id="sankey_vis"></div>
-                <h1>Sankey diagram goes here</h1>
             </div>
         </div>
 
         <!--    Call to Action: Quotes    -->
         <div class="row section" id="quotesInfo">
+            <!--      Title and Description      -->
+            <div class="sentimentDescription">
+                <h2 class="centerText squirrelMapTitle">For the census-takers, squirrel-watching was a highly enjoyable experience.</h2>
+            </div>
+
             <div class="col-md-12">
+                <!--        PUT QUOTES HERE       -->
                 <div id="quotes"></div>
-                <h1>Inspiring quotes go here</h1>
             </div>
         </div>
 
