updated bubble and word cloud vis

--- a/index.html
+++ b/index.html
@@ -279,11 +279,18 @@
 
         <!-- Word Map Vis -->
         <div class="section" id="storiesVis">
+            <div class="row">
+                These are the 50 most common words appearing in all the census takers' stories.
+            </div>
             <div class="row align-middle" style="height: 80vh;">
-                <div class="col-md-5">
-                    <div class="row" id="stories_vis"></div>
-                    <div class="row" style="height: 7vh; " id="sample_stories"></div>
-                </div>
+
+                    <div class="col-md-6">
+                        <div class="row" id="stories_vis"></div>
+                    </div>
+                    <div class="col-md-6" style="display: flex; justify-content: left; align-items: center">
+                        <div class="row" id="sample_stories"></div>
+                    </div>
+
             </div>
         </div>
 
@@ -306,13 +313,24 @@
                             <option value="Human Interactions">Human Interactions</option>
                             <option value="Activities">Activities</option>
                             <option value="Sounds">Sounds</option>
-                            <!--                            <option value="Fur color">Fur color</option>-->
-                            <!--                            <option value="numberPriorates">Number of seats held in the civic council</option>-->
+                            <option value="Tail movements">Tail movements</option>
+                            <option value="Fur color">Fur color</option>
                         </select>
                     </div>
                     <div id="bubble_vis"></div>
                 </div>
                 <div class="col-md-6">
+                    <div> [Insert explanation about Kuks, Quaas, and Moans, also what different tail movements mean.
+                        Is there a correlation between squirrel behaviors and interactions with humans?]
+                        <br>
+                        Eventually, we want to be able to hear a squirrel kuk, quaa, or moan when we click on
+                        bubbles in that view of the visualization.
+                        <br>
+                        Pay special attention to the approaching squirrels! They were spotted running and climbing, and tend to Kuk.
+                        <br> The bar vis below shows the frequencies on the entire dataset, not just the sample. Note that some
+                        squirrels may have been spotted doing multiple activities or no activities at all,
+                        so the total does not always equal 2373, and counts do not always correspond to distinct squirrels.
+                    </div>
                     <div id="bar_vis"></div>
                 </div>
             </div>
