--- a/index.html
+++ b/index.html
@@ -393,15 +393,37 @@
 
         <!--    Call to Action: Quotes    -->
         <div class="row section" id="quotesInfo">
-            <!--      Title and Description      -->
-            <div class="sentimentDescription">
-                <h2 class="centerText squirrelMapTitle">For the census-takers, squirrel-watching was a highly enjoyable experience.</h2>
+            <div class="centerItems">
+                <h4 id="transition2Quotes" class="centerText">For the census-takers, squirrel-watching was a highly enjoyable experience.</h4>
+                <button class="squirButton" id="quotesTransition">Click to find out more!</button>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5">
+                        <p class="backgroundLayout" id="firstQuote">
+                            “Being part of the project is about more than counting squirrels.
+                            ...It tunes the person to the environment, and makes you notice things that you otherwise wouldn’t.
+                            Listen closely enough, and you can hear [the squirrels] rustling in the bushes, making the “kukking” noise, or crunching on a nut.”
+                            </br> - Jamie Allen, squirrel census founder
+                        </p>
+                    </div>
+                    <div class="col-md-7"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-7"></div>
+                    <div class="col-md-5">
+                        <p class="backgroundLayout" id="secondQuote">
+                            “Today was a fine day for a squirrel census and I very much appreciated the opportunity -- it was a very peaceful experience.
+                            Counting squirrels makes your troubles disappear into nature. Thanks!”
+                            </br> - Anonymous squirrel census taker
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <button class="squirButton" id="nextQuote">NEXT</button>
+            <button class="squirButton" id="prevQuote">GO BACK</button>
 
-            <div class="col-md-12">
-                <!--        PUT QUOTES HERE       -->
-                <div id="quotes"></div>
-            </div>
+
         </div>
 
         <!-- Call to Action: Take a Walk in the Park! -->
