moved title in walk-map-vis to right column, shortened width of the map

--- a/index.html
+++ b/index.html
@@ -429,25 +429,26 @@
         <!-- Call to Action: Take a Walk in the Park! -->
         <div class="row section">
             <!--      Title and Description   -->
-            <div class="walkDescription">
-                <h1 class="centerText">Learn about the animals you could see on a walk in Central Park! </h1>
-            </div>
+<!--            <div class="walkDescription">-->
+<!--                -->
+<!--            </div>-->
 
             <div class="row walkMap">
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div id="walk_map_vis"></div>
                 </div>
 
                 <!--      Info about walk         -->
-                <div class="col-md-6" style="padding-left: 30px; padding-right: 50px;">
+                <div class="col-md-7" style="padding-left: 30px; padding-right: 50px;">
                     <div id="walk_map_info">
+                        <h1 style="margin-bottom: 15px;">Learn about the animals you could see on a walk in Central Park! </h1>
                         <p><strong>Instructions: </strong></p>
                         <ul>
                             <li>Using the tool bar on the left, draw line segments (a walk) on the map.</li>
                             <li>Stay within the bounds of Central Park.</li>
                             <li> The shorter your line segments, the more accurate your walk information will be.</li>
+                            <li>Click "Finish" on the tool bar when you are ready to learn about your walk!</li>
                         </ul>
-                        <p>Click "Finish" on the tool bar when you are ready to learn about your walk!</p>
                         <div class="card mb-4 shadow-sm walkCard">
                             <div class="card-header">Your Walk</div>
                             <div class="card-body">
