added four quotes, z-index styling, fade-in

--- a/index.html
+++ b/index.html
@@ -397,43 +397,58 @@
                 <h4 id="transition2Quotes" class="centerText">For the census-takers, squirrel-watching was a highly enjoyable experience.</h4>
                 <button class="squirButton" id="quotesTransition">Click to find out more!</button>
             </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <p class="backgroundLayout" id="firstQuote">
+            <div class="container quotes">
+                <div class="quotesRelative">
+                    <div class="row quote" id="firstQuote">
+                        <p>
                             “Being part of the project is about more than counting squirrels.
                             ...It tunes the person to the environment, and makes you notice things that you otherwise wouldn’t.
                             Listen closely enough, and you can hear [the squirrels] rustling in the bushes, making the “kukking” noise, or crunching on a nut.”
-                            </br> - Jamie Allen, squirrel census founder
+                            </br> - Jamie Allen, Squirrel Census Founder
                         </p>
+                        <svg class="downArrow" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.5 14.9235L15.9705 7.34972L17 8.3923L8.5 17L0 8.3923L1.02953 7.34972L8.5 14.9235ZM17 1.04257L8.5 9.65028L0 1.04257L1.02953 0L8.5 7.56513L15.9705 0L17 1.04257Z" fill="black"/>
+                        </svg>
                     </div>
-                    <div class="col-md-7"></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-7"></div>
-                    <div class="col-md-5">
-                        <p class="backgroundLayout" id="secondQuote">
+                    <div class="row quote" id="secondQuote">
+                        <p>
                             “Today was a fine day for a squirrel census and I very much appreciated the opportunity -- it was a very peaceful experience.
                             Counting squirrels makes your troubles disappear into nature. Thanks!”
-                            </br> - Anonymous squirrel census taker
+                            </br> - Census Taker
+                        </p>
+                        <svg class="downArrow" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.5 14.9235L15.9705 7.34972L17 8.3923L8.5 17L0 8.3923L1.02953 7.34972L8.5 14.9235ZM17 1.04257L8.5 9.65028L0 1.04257L1.02953 0L8.5 7.56513L15.9705 0L17 1.04257Z" fill="black"/>
+                        </svg>
+                    </div>
+                    <div class="row quote" id="thirdQuote">
+                        <p>
+                            "The friendships that were quickly made.
+                            This experience of active meditation. It was like fishing[,] only on land.
+                            The notion of watching squirrels while people were inquisitively watching us was fun,
+                            like having a secret in an open public forum."
+                            </br> - Census Taker
+                        </p>
+                        <svg class="downArrow" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.5 14.9235L15.9705 7.34972L17 8.3923L8.5 17L0 8.3923L1.02953 7.34972L8.5 14.9235ZM17 1.04257L8.5 9.65028L0 1.04257L1.02953 0L8.5 7.56513L15.9705 0L17 1.04257Z" fill="black"/>
+                        </svg>
+
+                    </div>
+                    <div class="row quote" id="fourthQuote">
+                        <p>For the census takers, squirrel-watching was peaceful, meditative, and calming.
+                            On the next page, you'll get to step into their shoes and learn about what walking through Central Park would be like!
                         </p>
                     </div>
                 </div>
+
             </div>
-            <button class="squirButton" id="nextQuote">NEXT</button>
-            <button class="squirButton" id="prevQuote">GO BACK</button>
 
 
         </div>
 
         <!-- Call to Action: Take a Walk in the Park! -->
         <div class="row section">
-            <!--      Title and Description   -->
-<!--            <div class="walkDescription">-->
-<!--                -->
-<!--            </div>-->
-
             <div class="row walkMap">
+                <!--  Walk Map  -->
                 <div class="col-md-5">
                     <div id="walk_map_vis"></div>
                 </div>
